# fa-essentials

./: .flake8  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  to-uninstall.txt
.github/workflows/: testing_and_deployment.yml
config/: app_config.yaml
faessentials/: asset_formatter.py  constants.py  database.py  global_logger.py  globallogger.py  pair_formatter.py  security.py  utils.py  validators.py
tests/: __init__.py  docker-compose.yaml  mock_app_config.yaml  test_asset_formatter.py  test_blocked_ip.py  test_crypto.py  test_database.py  test_database_availability.py  test_database_messages.py  test_ip_security.py  test_security.py  test_utils.py  test_validators.py
tksessentials/: asset_formatter.py  database.py  security.py  utils.py  validators.py
