# pyproject.toml

[build-system]
requires      = ["setuptools>=66.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fa-essentials"
version = "1.0.132"
description = "Essentials for our projects."
readme = "README.md"
authors = [{ name = "Brayan", email = "brayan@sparkandhale.com" }]
#license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
keywords = ["finance", "trading", "models"]
dependencies = [
    "redis",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Freya-Alpha/fa-essentials"

[tool.bumpver]
current_version = "1.0.132"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
#"setup.py" = [
#    "version = '{version}'",
#]
#"README.md" = [
#    "{version}",
#    "{pep440_version}",
#]

